# openwrtrouter.github.io

./: .gitattributes  QCA4019-firmware-5-ct-full-community-12.bin-lede.017  QCA4019-firmware-5-ct-full-htt-mgt-community-12.bin-lede.017  QCA4019-firmware-5-ct-full-htt-mgt-community-12.bin-lede.022  QCA4019-firmware-5-ct-htt-mgt-community-12.bin-lede.022  QCA9887-firmware-2-ct-full-community-22.bin.lede.017  QCA9887-firmware-2-ct-full-htt-mgt-community-22.bin.lede.017  QCA9887-firmware-2-ct-full-htt-mgt-community-22.bin.lede.022  QCA9888-firmware-5-ct-full-community-12.bin-lede.017  QCA9888-firmware-5-ct-full-htt-mgt-community-12.bin-lede.017  QCA9888-firmware-5-ct-full-htt-mgt-community-12.bin-lede.022  QCA9888-firmware-5-ct-htt-mgt-community-12.bin-lede.022  QCA988X-firmware-2-ct-full-community-22.bin.lede.017  QCA988X-firmware-2-ct-full-htt-mgt-community-22.bin.lede.017  QCA988X-firmware-2-ct-full-htt-mgt-community-22.bin.lede.022  QCA9984-firmware-5-ct-full-community-12.bin-lede.017  QCA9984-firmware-5-ct-full-htt-mgt-community-12.bin-lede.017  QCA9984-firmware-5-ct-full-htt-mgt-community-12.bin-lede.022  QCA9984-firmware-5-ct-htt-mgt-community-12.bin-lede.022  QCA99X0-firmware-5-ct-full-community-12.bin-lede.017  QCA99X0-firmware-5-ct-full-htt-mgt-community-12.bin-lede.017  QCA99X0-firmware-5-ct-full-htt-mgt-community-12.bin-lede.022  QCA99X0-firmware-5-ct-htt-mgt-community-12.bin-lede.022  README.md  VERSION  ath10k-ct-2021-06-03-b44cd7b2.tar.xz  boost_1_76_0.tar.bz2  linux-5.4.158.tar.xz  linux-firmware-20210511.tar.xz  procd-2020-03-13-77a6782d.tar.xz  sqm-scripts-1.6.0.tar.xz  ustream-ssl-2020-01-05-30cebb4f.tar.xz
_p2w_r619ac-128m/: VERSION
_p2w_r619ac-128m/host/lib/: libcrypto.la  libfl.la  (+17 more)
_p2w_r619ac-128m/target-arm_cortex-a7+neon-vfpv4_musl_eabi/udns-0.4/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  dnsget  ex-rdns  libtool  libudns.la  missing  rblcheck  udns_XtoX.lo  udns_bl.lo  udns_codes.lo  udns_dn.lo  udns_dntosp.lo  udns_init.lo  udns_jran.lo  udns_misc.lo  udns_parse.lo  udns_resolver.lo  udns_rr_a.lo  udns_rr_mx.lo  udns_rr_naptr.lo  udns_rr_ptr.lo  udns_rr_srv.lo  udns_rr_txt.lo
_p2w_r619ac-128m/target-arm_cortex-a7+neon-vfpv4_musl_eabi/udns-0.4/.deps/: dnsget.Po  ex-rdns.Po  rblcheck.Po  udns_XtoX.Plo  udns_bl.Plo  udns_codes.Plo  udns_dn.Plo  udns_dntosp.Plo  udns_init.Plo  udns_jran.Plo  udns_misc.Plo  udns_parse.Plo  udns_resolver.Plo  udns_rr_a.Plo  udns_rr_mx.Plo  udns_rr_naptr.Plo  udns_rr_ptr.Plo  udns_rr_srv.Plo  udns_rr_txt.Plo
_p2w_r619ac-128m/target-arm_cortex-a7+neon-vfpv4_musl_eabi/udns-0.4/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
(+8919 files in other folders)
